# routers/router.go
@@ -16,6 +16,7 @@ import (
 func init() {
 	ns := beego.NewNamespace("/v1",
 		beego.NSNamespace("/admin", beego.NSInclude(&controllers.AdminController{})),
+		beego.NSNamespace("/activity", beego.NSInclude(&controllers.ActivityController{})),
 	)
 	beego.AddNamespace(ns)
 }
