# swagger/swagger.yml
@@ -11,248 +11,277 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /object/:
+  /activity/:
     get:
       tags:
-      - object
-      description: get all objects
-      operationId: ObjectController.GetAll
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    post:
-      tags:
-      - object
-      description: create object
-      operationId: ObjectController.Create
-      parameters:
-      - in: body
-        name: body
-        description: The object content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          description: '{string} models.Object.Id'
-        "403":
-          description: body is empty
-  /object/{objectId}:
-    get:
-      tags:
-      - object
-      description: find object by objectid
-      operationId: ObjectController.Get
-      parameters:
-      - in: path
-        name: objectId
-        description: the objectid you want to get
-        required: true
-        type: string
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    put:
-      tags:
-      - object
-      description: update the object
-      operationId: ObjectController.Update
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: The body
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    delete:
-      tags:
-      - object
-      description: delete the object
-      operationId: ObjectController.Delete
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectId you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: objectId is empty
-  /user/:
-    get:
-      tags:
-      - user
-      description: get all Users
-      operationId: UserController.GetAll
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.User'
-    post:
-      tags:
-      - user
-      description: create users
-      operationId: UserController.CreateUser
-      parameters:
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: '{int} models.User.Id'
-        "403":
-          description: body is empty
-  /user/{uid}:
-    get:
-      tags:
-      - user
-      description: get user by uid
-      operationId: UserController.Get
-      parameters:
-      - in: path
-        name: uid
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is empty
-    put:
-      tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
-      parameters:
-      - in: path
-        name: uid
-        description: The uid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.User'
-        "403":
-          description: :uid is not int
-    delete:
-      tags:
-      - user
-      description: delete the user
-      operationId: UserController.Delete
-      parameters:
-      - in: path
-        name: uid
-        description: The uid you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: uid is empty
-  /user/login:
-    get:
-      tags:
-      - user
-      description: Logs user into the system
-      operationId: UserController.Login
+      - activity
+      summary: 获取活动信息
       parameters:
       - in: query
-        name: username
-        description: The username for login
+        name: uid
+        description: uid
         required: true
-        type: string
-      - in: query
-        name: password
-        description: The password for login
-        required: true
-        type: string
+        type: integer
+        format: int64
       responses:
         "200":
-          description: '{string} login success'
-        "403":
-          description: user not exist
-  /user/logout:
+          schema:
+            $ref: '#/definitions/models.ActivityInfo'
+        "204":
+          description: '{string}   code 204'
+    put:
+      tags:
+      - activity
+      summary: 修改活动
+      parameters:
+      - in: body
+        name: body
+        description: 活动信息
+        required: true
+        schema:
+          $ref: '#/definitions/models.ActivityInfo'
+      responses:
+        "200":
+          description: '{string} code 200'
+        "201":
+          description: '{string} code 201'
+    post:
+      tags:
+      - activity
+      summary: 添加活动
+      parameters:
+      - in: body
+        name: body
+        description: 活动信息
+        required: true
+        schema:
+          $ref: '#/definitions/models.ActivityInfo'
+      responses:
+        "200":
+          description: '{string} code 200'
+        "201":
+          description: '{string} code 201'
+    delete:
+      tags:
+      - activity
+      summary: 删除活动
+      parameters:
+      - in: query
+        name: uid
+        description: uid
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{string}   code   200'
+        "201":
+          description: '{string}   code   201'
+  /admin/:
     get:
       tags:
-      - user
-      description: Logs out current logged in user session
-      operationId: UserController.logout
+      - admin
+      summary: 获取会员信息
+      parameters:
+      - in: query
+        name: id
+        description: 会员编号
+        required: true
+        type: integer
+        format: int64
       responses:
         "200":
-          description: '{string} logout success'
+          schema:
+            $ref: '#/definitions/models.AdminInfo'
+        "204":
+          description: '{string}   code 204'
+    put:
+      tags:
+      - admin
+      summary: 修改会员
+      parameters:
+      - in: body
+        name: body
+        description: 会员信息
+        required: true
+        schema:
+          $ref: '#/definitions/models.AdminInfo'
+      responses:
+        "200":
+          description: '{string} code 200'
+        "201":
+          description: '{string} code 201'
+    post:
+      tags:
+      - admin
+      summary: 添加会员
+      parameters:
+      - in: body
+        name: body
+        description: 会员信息
+        required: true
+        schema:
+          $ref: '#/definitions/models.AdminInfo'
+      responses:
+        "200":
+          description: '{string} code 200'
+        "201":
+          description: '{string} code 201'
+    delete:
+      tags:
+      - admin
+      summary: 删除会员
+      parameters:
+      - in: query
+        name: id
+        description: 会员编号
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{string} code 200'
+        "201":
+          description: '{string} code 201'
+  /admin/all:
+    get:
+      tags:
+      - admin
+      summary: 分页查询会员信息
+      parameters:
+      - in: query
+        name: pageNo
+        description: 页数
+        type: integer
+        format: int64
+      - in: query
+        name: pageSize
+        description: 条数
+        type: integer
+        format: int64
+      - in: query
+        name: nickname
+        description: 昵称
+        type: string
+      - in: query
+        name: name
+        description: 姓名
+        type: string
+      - in: query
+        name: phone
+        description: 电话
+        type: string
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.Page'
+        "204":
+          description: '{string} code 204'
 definitions:
-  models.Object:
-    title: Object
+  .ObjectId:
+    type: object
+  .false:
+    type: object
+  models.ActivityInfo:
+    title: ActivityInfo
     type: object
     properties:
-      ObjectId:
+      _id:
+        $ref: '#/definitions/bson.ObjectId'
+        description: 编号
+      content:
+        description: 内容
         type: string
-      PlayerName:
+      cover:
+        description: 封面
         type: string
-      Score:
+      createTime:
+        description: 创建时间
+        type: string
+      details:
+        description: 详情
+        type: string
+      title:
+        description: 标题
+        type: string
+      uid:
+        description: 用户编号
         type: integer
         format: int64
-  models.Profile:
-    title: Profile
+  models.AdminInfo:
+    title: AdminInfo
     type: object
     properties:
-      Address:
+      account:
+        description: 账号
         type: string
-      Age:
+      address:
+        description: 地址
+        type: string
+      createTime:
+        description: 创建时间
+        type: string
+      email:
+        description: 邮箱
+        type: string
+      headimgurl:
+        description: '*头像'
+        type: string
+      id:
+        description: 编号
         type: integer
         format: int64
-      Email:
+      isUse:
+        description: 是否使用
         type: string
-      Gender:
+      name:
+        description: 姓名
         type: string
-  models.User:
-    title: User
+      nickName:
+        description: '*昵称'
+        type: string
+      password:
+        description: 密码
+        type: string
+      phone:
+        description: 电话
+        type: string
+      remark:
+        description: 备注(预留信息)
+        type: string
+  models.Page:
+    title: Page
     type: object
     properties:
-      Id:
-        type: string
-      Password:
-        type: string
-      Profile:
-        $ref: '#/definitions/models.Profile'
-      Username:
-        type: string
+      firstPage:
+        description: 是否是第一页
+        type: boolean
+      lastPage:
+        description: 是否是最后一页
+        type: boolean
+      list:
+        $ref: '#/definitions/8643.0x1298c3a0.false'
+        description: 内容list
+      pageNo:
+        description: 第几页
+        type: integer
+        format: int64
+      pageSize:
+        description: 每页多少条
+        type: integer
+        format: int64
+      totalCount:
+        description: 总条数
+        type: integer
+        format: int64
+      totalPage:
+        description: 总页数
+        type: integer
+        format: int64
 tags:
-- name: object
+- name: admin
   description: |
-    Operations about object
-- name: user
+    会员模块
+- name: activity
   description: |
-    Operations about Users
+    会员模块
